--- a/src/locales/HI.json
+++ b/src/locales/HI.json
@@ -5,6 +5,9 @@
   "homeParagraph": {
     "listen": "JAY-MUSIC के साथ संगीत की दुनिया में उतरें, जहां धुनें जीवंत हो उठती हैं! पॉप और रॉक से लेकर शास्त्रीय और इंडी तक विभिन्न शैलियों में गाने, एल्बम और प्लेलिस्ट का विशाल संग्रह देखें। चाहे आप नवीनतम हिट्स, सदाबहार क्लासिक्स, या छिपे हुए रत्नों की खोज कर रहे हों, हमने आपको कवर कर लिया है।"
   },
+  "manage": {
+    "my_songs": "मेरे गाने"
+  },
   "register": {
     "TOS": "",
     "accept": ""
